maemo-launcher (0.30-2) UNRELEASED; urgency=low

  * Export USER, LOGNAME, SHELL and HOME to maemo-launcher. (Fixes: MM#1131)

 -- Guillem Jover <guillem.jover@nokia.com>  Fri, 06 Jun 2008 20:23:48 +0300

maemo-launcher (0.30-1) unstable; urgency=low

  * New Upstream Release.
    - README: Typo fix and additional information for symbol versioning.
      Thanks to Eero Tamminen <eero.tamminen@nokia.com>.
  * Replace libosso-help-dev with libhildonhelp-dev in Build-Depends.
    (Fixes: NB#85923)

 -- Guillem Jover <guillem.jover@nokia.com>  Thu, 29 May 2008 18:33:55 +0300

maemo-launcher (0.29-1) unstable; urgency=low

  * New Upstream Release.
    - Destroy and store state only for valid childs. (Fixes: NB#85166)

 -- Guillem Jover <guillem.jover@nokia.com>  Mon, 05 May 2008 16:56:36 +0300

maemo-launcher (0.28-1) unstable; urgency=low

  * New Upstream Release.
    - Fix memory leaks for comm_msg from the upgrade in-place support.
      (Fixes: NB#84534)

 -- Guillem Jover <guillem.jover@nokia.com>  Sun, 27 Apr 2008 23:04:41 +0300

maemo-launcher (0.27-1) unstable; urgency=low

  * New Upstream Release.
    - Port client to Hildon 1.x.
    - Use compile options determined from configure to build the client.
    - Use exit(3) instead of _exit(2) so that things like atexit(3) work.
      (Fixes: NB#80273)
    - Support upgrading the launcher via in-memory hot-swap while preserving
      the state. (Fixes: NB#82624)
    - Document changes needed for make based build systems and mention the
      possible usage of version scripts. (Fixes: NB#72805)
  * Update copyright year in debian/copyright.

 -- Guillem Jover <guillem.jover@nokia.com>  Wed, 16 Apr 2008 00:52:25 +0300

maemo-launcher (0.26-1) unstable; urgency=low

  * New Upstream Release.
    - Fix memory leak when failing to allocate the childs structure.

 -- Guillem Jover <guillem.jover@nokia.com>  Wed, 03 Oct 2007 22:12:20 +0300

maemo-launcher (0.25-1) unstable; urgency=low

  * New Upstream Release.